--- a/Pages/BirthdayGift.html
+++ b/Pages/BirthdayGift.html
@@ -170,21 +170,19 @@
 <body>
   <div class="hero">
     <h1>Happy Birthday, My Love!</h1>
-    <p>You make the world brighter just by existing!</p>
+    <p>You are not just my girl - you are the glitch in my code, the bug I'll never fix, and equation I'll keep solving till death!</p>
     <div class="photo-frame">
-      <img id="photo1" src="your-photo-1.jpg" alt="Photo 1">
-      <img id="photo2" src="your-photo-2.jpg" alt="Photo 2">
-      <img id="photo3" src="your-photo-3.jpg" alt="Photo 3">
+      <img id="photo1" src="1.webp" alt="Photo 1">
+      <img id="photo2" src="2.jpeg" alt="Photo 2">
+      <img id="photo3" src="3.webp" alt="Photo 3">
     </div>
     <button onclick="goToMessagePage()">Read My Message</button>
   </div>
 
   <div class="message-page" id="messagePage">
     <h2>My Message to You</h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu leo vel lorem laoreet faucibus. <br>
-      Nulla facilisi. Morbi dapibus, erat ac tincidunt volutpat, neque nunc viverra risus, at rutrum ligula <br>
-      nulla nec justo. Vivamus ut felis et erat consequat porttitor. Love you always.
+    <p style="color: black;">
+      isang year nalang pwede na🤩!!! hahaha d joke😆, This might not be much but i made it anyways... Gusto ko lang sabihin na if you ever have goals and dreams... achieve it dont stop! not achieving it is learning, stopping is failing... so dont stop hmmm? Thank you for giving me another chance🫠 ill make sure to do better, please dont expect much but ill do my best for you!! I really really really love you very very very much po!!! one last thing heheh please always take care of yourself okay? Happy Birthday my Dear☺️!!
     </p>
     <button onclick="backToMain()">Back</button>
   </div>
