Update and rename BirthdayGift.html to forLyka.html

--- a/Pages/forLyka.html
+++ b/Pages/forLyka.html
@@ -170,7 +170,7 @@
 <body>
   <div class="hero">
     <h1>Happy Birthday, My Love!</h1>
-    <p>You are not just my girl - you are the glitch in my code, the bug I'll never fix, and equation I'll keep solving till death!</p>
+    <p>You are not just my girl - you are the glitch in my code, the bug that I'll never fix, and equation I'll keep solving till death!</p>
     <div class="photo-frame">
       <img id="photo1" src="1.webp" alt="Photo 1">
       <img id="photo2" src="2.jpeg" alt="Photo 2">
